--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,19 @@
 .header__lang-link {
-  margin-left: 1115px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  text-align: right;
-  text-decoration-line: none;
+  text-decoration: none;
   color: #ffffff;
+  margin-right: 18px;
+  display: block;
 }
 
 .header__lang-link:hover {
-  text-decoration-line: underline;
+  text-decoration: underline;
+}
+
+.header__lang-link:last-of-type {
+  margin-right: 0;
 }
