--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,10 +1,10 @@
-.intro__tittle {
-  margin-right: 442px;
+.intro__title {
+  margin: 0;
+  padding: 0;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
-  text-align: center;
   color: #ffffff;
 }
