--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,8 @@
 @import url(../blocks/places/place/__paragraph/place__paragraph.css);
 @import url(../blocks/places/place/__title/place__title.css);
 @import url(../blocks/places/place/__website/place__website.css);
+@import url(../blocks/places/place/__website/__link/website__link.css);
+@import url(../blocks/places/place/__website/__url-heading/website__url-heading.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
