--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro {
-  margin-left: 148px;
-  margin-right: 442px;
-  margin-right: 442px;
+  margin-left: 100px;
   margin-top: 92px;
+  max-width: 690px;
 }
