--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,14 +6,14 @@
   line-height: 28px;
   text-decoration: none;
   color: #ffffff;
-  margin-right: 18px;
-  display: block;
 }
 
 .header__lang-link:hover {
   text-decoration: underline;
 }
-
-.header__lang-link:last-of-type {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
