--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption {
-  
-  height: 14px;
   margin-top: 8px;
   font-family: "Inter";
   font-style: normal;
@@ -10,4 +8,15 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #ffffff;
+  text-align: left;
+}
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
