--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,23 @@
 .lead__image {
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 64px;
+  max-width: 100%;
+}
+@media screen and (max-width: 1279px) {
+  .lead__image {
+    max-width: 928px;
+    margin: 56px auto 0;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .lead__image {
+    max-width: 928px;
+    margin: 56px auto 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .lead__image {
+    margin: 40px 0 0;
+  }
 }
