--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,6 @@
 .lead__subtitle {
-  margin: 0 auto;
-  margin-left: 172px;
-  margin-right: 172px;
+  margin: 0;
+  padding: 0;
   margin-top: 32px;
   font-family: "Inter";
   font-style: normal;
@@ -10,4 +9,13 @@
   line-height: 36px;
   text-align: center;
   color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    margin-top: 16px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
