--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,5 @@
 .lead__title {
-  width: 720px;
-  height: 200px;
-  margin: 0 auto;
-  margin-left: 132px;
-  margin-right: 132px;
+  margin: 0;
   text-align: center;
   font-family: "Inter";
   font-style: normal;
@@ -11,4 +7,10 @@
   font-size: 96px;
   line-height: 100px;
   color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+  }
 }
