--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,7 @@
 .photo-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3,1fr);
   gap: 16px;
-  margin: 0 auto;
   margin-top: 92px;
-  margin-left: 48px;
-  margin-right: 48px;
 }
