--- a/blocks/places/place/__website/__url-heading/website__url-heading.css
+++ b/blocks/places/place/__website/__url-heading/website__url-heading.css
@@ -8,3 +8,9 @@
   color: #aaaaaa;
   margin-bottom: 12px;
 }
+@media screen and (max-width: 767px) {
+  .website__url-heading {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
