--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,23 @@
   margin-top: 92px;
   max-width: 690px;
 }
+
+@media screen and (max-width: 1279px) {
+  .intro {
+    margin-left: 48px;
+    margin-top: 92px;
+    max-width: 690px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .intro {
+    margin:88px auto 0;
+    max-width: 720px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .intro {
+    margin:64px auto 0;
+    max-width: 288px;
+  }
+}
