--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,17 +7,20 @@
 @media screen and (max-width: 1279px) {
   .lead__image {
     max-width: 928px;
+    width: 100%;
     margin: 56px auto 0;
   }
 }
 @media screen and (max-width: 1023px) {
   .lead__image {
     max-width: 928px;
+    width: 100%;
     margin: 56px auto 0;
   }
 }
 @media screen and (max-width: 767px) {
   .lead__image {
+    width: 100%;
     margin: 40px 0 0;
   }
 }
