--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -1,15 +1,22 @@
 .place__paragraph {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 26px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 163%;
-    color: #FFFFFF;  
+  margin: 0;
+  padding: 0;
+  margin-bottom: 26px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 163%;
+  color: #ffffff;
 }
 
-.place__paragraph:last-of-type{
-    margin-bottom: 0;
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+@media screen and (max-width:767px) {
+  .place__paragraph {
+    font-size: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
