--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -6,3 +6,29 @@
   grid-template-columns: 460px 1fr;
   align-items: flex-start;
 }
+@media screen and (max-width: 1279px) {
+  .place {
+    margin-bottom: 80px;
+    column-gap: 32px;
+    row-gap: 48px;
+    grid-template-columns: 440px 1fr;
+    align-items: flex-start;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .place {
+    margin-bottom: 73px;
+    column-gap: 28px;
+    row-gap: 48px;
+    grid-template-columns: 340px 1fr;
+    align-items: flex-start;
+
+  }
+}
+@media screen and (max-width: 767px) {
+  .place {
+    margin-bottom: 50px;
+    grid-template-columns: repeat(1, 1fr);
+    gap:32px
+  }
+}
