--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,22 @@
 .places {
-    margin-left: 168px;
-    margin-right: 32px;
+    margin-left: 216px;
+    margin-right: 80px;
     margin-top:95px;
 }
+@media screen and (max-width: 1279px) {
+    .places {
+        margin: 92px 48px 0;
+
+    }
+  }
+  @media screen and (max-width: 1023px) {
+    .places {
+        margin: 88px 24px 0;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .places {
+        margin: 64px 0;
+
+    }
+  }
