--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,5 @@
 .cover__background {
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
     position:absolute;
     z-index: -1;
@@ -8,4 +8,3 @@
     object-fit: contain;
     object-position: center;
 }
-  
