--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,8 @@
 .cover__subtitle {
-  margin: 32px auto;
+  margin:0;
+  padding: 0;
+  margin-top:32px;
   max-width: 360px;
-  z-index: 3;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -9,8 +10,22 @@
   line-height: 22px;
   text-align: center;
   color: #ffffff;
-  position: relative;
 }
-.cover__subtitle:hover {
-  opacity: 0.8;
+@media screen and (max-width: 1279px) {
+  .cover__subtitle {
+  }
+}
+@media screen and (max-width: 1023px) {
+  .cover__subtitle {
+  }
+}
+@media screen and (max-width: 797px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #ffffff;
+    max-width: 100%;
+    margin:16px 16px 0;
+  }
 }
