--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,28 @@
 .cover__title {
- padding-top:245px;
-  margin: 0 auto 0;
-  max-width: 560px;
+  margin: 0;
+  padding: 0;
   font-family: "Inter";
   font-style: normal;
+  max-width: 560px;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
   color: #ffffff;
-  z-index: 3;
-  position: relative;
+}
+@media screen and (max-width: 1279px) {
+  .cover__title {
+  }
+}
+@media screen and (max-width: 1023px) {
+  .cover__title {
+  }
+}
+@media screen and (max-width: 797px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 100%;
+    margin:0 16px 0;
+  }
 }
