--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,22 @@
 .cover {
-   padding: 0;
-    margin:0;
-    margin-top: 89px;
-    position: relative;
-   height: 740px;
+  background-image: url(../../images/cover__background.png);
+  background-position: center center;
+  margin: 89px 48px 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media screen and (max-width: 1279px) {
+  .cover {
+    margin: 92px 0 0;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .cover {
+   margin: 90px 0 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .cover {
+   margin: 66px 0 0;
+  }
 }
