--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,10 +1,10 @@
 .intro {
-  margin-left: 100px;
-  margin-top: 92px;
+  margin-left: 148px;
+  margin-top: 74px;
   max-width: 690px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width:1289px) {
   .intro {
     margin-left: 48px;
     margin-top: 92px;
@@ -13,13 +13,14 @@
 }
 @media screen and (max-width: 1023px) {
   .intro {
-    margin:88px auto 0;
-    max-width: 720px;
+    margin:88px 24px 0;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 767px) {
   .intro {
-    margin:64px auto 0;
-    max-width: 288px;
+    margin:64px 16px 0;
+    max-width: 100%;
+    
   }
 }
