--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -9,7 +9,8 @@
   color: #ffffff;
   list-style-type: none;
 }
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
   .intro__list {
     margin-top: 34px;
+  }
 }
