--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,5 @@
 .photo-grid__item {
-   width: 100%;
-   object-fit: contain;
-   object-position: center
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
 }
