--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -22,13 +22,12 @@
     row-gap: 48px;
     grid-template-columns: 340px 1fr;
     align-items: flex-start;
-
   }
 }
 @media screen and (max-width: 767px) {
   .place {
     margin-bottom: 50px;
     grid-template-columns: repeat(1, 1fr);
-    gap:32px
+    gap: 32px;
   }
 }
