--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title {
-  margin: 0;
+  margin: 0 auto 0;
+  max-width: 720px;
   text-align: center;
   font-family: "Inter";
   font-style: normal;
@@ -10,6 +11,7 @@
 }
 @media screen and (max-width: 767px) {
   .lead__title {
+    max-width: 100%;
     font-size: 40px;
     line-height: 44px;
   }
