--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,9 +1,8 @@
 .cover__subtitle {
-  margin: 0;
+  margin: 32px 0 0 0;
   padding: 0;
-  margin-top: 32px;
   max-width: 360px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -11,12 +10,10 @@
   text-align: center;
   color: #ffffff;
 }
-@media screen and (max-width: 797px) {
+@media screen and (max-width: 767px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    text-align: center;
-    color: #ffffff;
     max-width: 100%;
     margin: 16px 16px 0;
   }
