--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
   margin: 0;
   padding: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   max-width: 560px;
   font-weight: 900;
@@ -10,11 +10,11 @@
   text-align: center;
   color: #ffffff;
 }
-@media screen and (max-width: 797px) {
+@media screen and (max-width: 767px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    max-width: 100%;
+    max-width: 288px;
     margin: 0 16px 0;
   }
 }
