--- a/blocks/intro/__number/intro__number.css
+++ b/blocks/intro/__number/intro__number.css
@@ -1,9 +1,8 @@
-.intro__text {
-  margin: 40px 0 0 0;
+.intro__number {
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 163%;
+  font-size: 12px;
+  line-height: 18px;
   color: #ffffff;
 }
