--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,14 +1,11 @@
 .intro {
-  margin-left: 148px;
-  margin-top: 74px;
+  margin: 92px 0 0 148px;
   max-width: 690px;
 }
 
 @media screen and (max-width: 1289px) {
   .intro {
-    margin-left: 48px;
-    margin-top: 92px;
-    max-width: 690px;
+    margin-left:48px;
   }
 }
 @media screen and (max-width: 1023px) {
@@ -20,6 +17,5 @@
 @media screen and (max-width: 767px) {
   .intro {
     margin: 64px 16px 0;
-    max-width: 100%;
   }
 }
