--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,7 @@
 .lead__subtitle {
-  margin: 0 auto 0;
+  margin: 32px auto 0;
   padding: 0;
-  margin-top: 32px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   max-width: 640px;
   font-weight: 400;
@@ -15,8 +14,6 @@
   .lead__subtitle {
     max-width: 100%;
     margin-top: 16px;
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
   }
