--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
-.website__link {
-  font-family: "Inter";
+.place__link {
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -7,11 +7,11 @@
   text-decoration-line: underline;
   color: #ffffff;
 }
-.website__link:hover {
+.place__link:hover {
   opacity: 0.8;
 }
 @media screen and (max-width: 767px) {
-  .website__link {
+  .place__link {
     margin-left: 16px;
     margin-right: 16px;
   }
