--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,7 @@
 .place__paragraph {
-  margin: 0;
+  margin: 0 0 26px;
   padding: 0;
-  margin-bottom: 26px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -10,13 +9,20 @@
   color: #ffffff;
 }
 
-.place__paragraph:last-of-type {
-  margin-bottom: 0;
-}
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
     margin-left: 16px;
     margin-right: 16px;
   }
+}
+
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
 }
