--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
   margin: 0;
   padding: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -18,8 +18,6 @@
   .place__title {
     margin-left: 16px;
     margin-right: 16px;
-    font-style: normal;
-    font-weight: 900;
     font-size: 32px;
     line-height: 35px;
   }
