--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,7 @@
-.website__url-heading {
-  font-family: "Inter";
+.place__url-heading {
+  text-transform: uppercase;
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -9,7 +11,7 @@
   margin-bottom: 12px;
 }
 @media screen and (max-width: 767px) {
-  .website__url-heading {
+  .place__url-heading {
     margin-left: 16px;
     margin-right: 16px;
   }
